--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test": "node scripts/tape.js && tape build/**/*.spec.js"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.3",
     "@types/tape": "^5.6.1",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
@@ -37,6 +38,7 @@
     "eslint": "^8.49.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "fast-glob": "^3.3.1",
+    "jsdom": "^22.1.0",
     "rollup": "^3.29.2",
     "rollup-plugin-dts": "^6.0.2",
     "rollup-plugin-esbuild": "^5.0.0",
