Added proof of concept

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,16 @@
   "compilerOptions": {
     "target": "ES6",
     "lib": ["ESNext", "DOM"],
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+
+    "jsx": "react",
+    "jsxFactory": "spark.createElement",
+    "jsxFragmentFactory": "spark.createFragment",
     
     "strict": true,
     "noImplicitAny": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
 
     "allowSyntheticDefaultImports": true,
