--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spark",
   "version": "0.0.1",
-  "description": "Simple DOM framework",
+  "description": "Simple JSX templating",
   "main": "dist/spark.cjs",
   "module": "dist/spark.mjs",
   "types": "dist/spark.d.ts",
@@ -30,15 +30,12 @@
     "test": "node scripts/tape.js && tape build/**/*.spec.js"
   },
   "devDependencies": {
-    "@types/jsdom": "^21.1.3",
     "@types/tape": "^5.6.1",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "esbuild": "^0.19.3",
     "eslint": "^8.49.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "fast-glob": "^3.3.1",
-    "jsdom": "^22.1.0",
     "rollup": "^3.29.2",
     "rollup-plugin-dts": "^6.0.2",
     "rollup-plugin-esbuild": "^5.0.0",
