Fixed element child type

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsx-flow",
+  "name": "@chronocide/spark",
   "version": "0.0.1",
   "description": "Simple JSX templating",
   "main": "dist/spark.cjs",
