--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "lint": "eslint src",
     "build": "rollup -c",
-    "prepublishOnly": "npm run lint && npm run test",
+    "prepublishOnly": "npm run lint && npm run test && npm run build",
     "test": "node scripts/tape.js && tape build/**/*.spec.js"
   },
   "devDependencies": {
