--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   "scripts": {
     "lint": "eslint src",
     "build": "rollup -c",
-    "prepublishOnly": "npm run lint && npm run test && npm run build",
-    "test": "node scripts/tape.js && tape build/**/*.spec.js"
+    "test": "node scripts/tape.js && tape build/**/*.spec.js",
+    "preversion": "npm run lint && npm run test && npm run build",
+    "postversion": "npm publish"
   },
   "devDependencies": {
     "@types/tape": "^5.6.1",
