--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@chronocide/spark",
   "version": "0.0.8",
   "description": "Simple JSX templating",
-  "main": "dist/spark.cjs",
-  "module": "dist/spark.mjs",
+  "type": "module",
   "types": "dist/spark.d.ts",
   "exports": {
+    "./package.json": "./package.json",
     ".": {
-      "import": "./dist/spark.mjs",
+      "import": "./dist/spark.js",
       "require": "./dist/spark.cjs"
     }
   },
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/chronoDave/spark.git"
+    "url": "git+https://github.com/chronoDave/spark.git"
   },
   "author": "Chronocide",
   "license": "GPL-3.0",
@@ -32,12 +32,10 @@
     "postversion": "npm publish"
   },
   "devDependencies": {
+    "@chronocide/eslint-config": "github:chronoDave/eslint-config",
     "@types/tape": "^5.6.1",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
     "esbuild": "^0.19.3",
-    "eslint": "^8.49.0",
-    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint": "^9.9.1",
     "rollup": "^3.29.2",
     "rollup-plugin-dts": "^6.0.2",
     "rollup-plugin-esbuild": "^5.0.0",
