--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "lib": ["ESNext", "DOM"],
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "target": "ESNext",
+    "lib": ["ESNext", "dom"],
+    "module": "Node16",
+    "moduleResolution": "node16",
+    "allowImportingTsExtensions": true,
 
     "jsx": "react",
     "jsxFactory": "spark.createElement",
@@ -11,11 +12,9 @@
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-
     "allowSyntheticDefaultImports": true,
 
-    "declaration": true,
+    "noEmit": true,
     "outDir": "./test/build"
   },
   "include": [
